finished first section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles2.css" />
 
     <title>Frontend Mentor | Easybank landing page</title>
 
@@ -46,6 +46,22 @@
         <button class="btn">Request Invite</button>
       </div>
     </header>
+    <section class="hero">
+      <!-- <div class="hero-container"> -->
+      <div class="hero-intro">
+        <h1>Next generation digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a
+          one-stop-shop for spending, saving, budgeting, investing, and much
+          more.
+        </p>
+        <button class="btn">Request Invite</button>
+      </div>
+      <div class="hero-img">
+        <img src="./images/image-mockups.png" alt="Imagens de celulares" />
+      </div>
+      <!-- </div> -->
+    </section>
 
     Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
