--- a/index.html
+++ b/index.html
@@ -113,6 +113,57 @@
         </div>
       </div>
     </section>
+    <section class="section-articles">
+      <h2>Latest Articles</h2>
+      <div class="articles-container">
+        <div class="article-card">
+          <img src="./images/image-currency.jpg" alt="" />
+          <div class="card-content">
+            <small>By Claire Robinson </small>
+            <h3><a href="#"> Receive money in any currency with no fees</a></h3>
+            <p>
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </p>
+          </div>
+        </div>
+        <div class="article-card">
+          <img src="./images/image-restaurant.jpg" alt="" />
+
+          <div class="card-content">
+            <small>By Wilson Hutton</small>
+            <h3><a href="#">Treat yourself without worrying about money</a></h3>
+            <p>
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
+            </p>
+          </div>
+        </div>
+        <div class="article-card">
+          <img src="./images/image-plane.jpg" alt="" />
+          <div class="card-content">
+            <small>By Wilson Hutton</small>
+            <h3><a href="#">Take your Easybank card wherever you go</a></h3>
+            <p>
+              We want you to enjoy your travels. This is why we don’t charge any
+              fees on purchases while you’re abroad. We’ll even show you …
+            </p>
+          </div>
+        </div>
+        <div class="article-card">
+          <img src="./images/image-confetti.jpg" alt="" />
+          <div class="card-content">
+            <small>By Claire </small>
+            <h3><a href="#">Our invite-only Beta accounts are now live!</a></h3>
+            <p>
+              After a lot of hard work by the whole team, we’re excited to
+              launch our closed beta. It’s easy to request an invite through the
+              site ...
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
@@ -133,10 +184,10 @@
     allows you to separate out your spending and set realistic limits each
     month. That means you … By Wilson Hutton Take your Easybank card wherever
     you go We want you to enjoy your travels. This is why we don’t charge any
-    fees on purchases while you’re abroad. We’ll even show you … By Claire
-    Robinson Our invite-only Beta accounts are now live! After a lot of hard
-    work by the whole team, we’re excited to launch our closed beta. It’s easy
-    to request an invite through the site ... About Us Contact Blog Careers
+    fees on purchases while you’re abroad. We’ll even show you … By
+    ClaireRobinson Our invite-only Beta accounts are now live! After a lot of
+    hard work by the whole team, we’re excited to launch our closed beta. It’s
+    easy to request an invite through the site ... About Us Contact Blog Careers
     Support Privacy Policy Request Invite © Easybank. All Rights Reserved
 
     <div class="attribution">
