--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/css/styles2.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <script src="./js/svg-inject.min.js"></script>
 
     <title>Frontend Mentor | Easybank landing page</title>
